# neural-architecture-search-agents

./: .gitignore  README.md  emissions.csv  requirements.txt
agentic_nas/: README.md  pyproject.toml  report.md  testapi.py
agentic_nas/src/agentic_nas/: crew.py  main.py
docs/report/: AutomatedDecisionCore_V0.0.1.md  mid-term-prototype-explanation.md  v1.md
experiments/configs/: baseline.yaml
src/: contracts.py  main.py
src/agents/: coordinator_agent.py  evaluation_agent.py  proposal_agent.py  search_agent.py
src/config/: __init__.py  schema.py
src/crew/: agents_factory.py  crew_runner.py  llm.py  orchestrator.py  output_parser.py  runtime.py  tasks_factory.py  tools.py
src/crew/agents/: __init__.py  base.py  executors.py  planner.py
src/crew/reasoning/: __init__.py  patterns.py
src/crew/shared_state/: __init__.py  context.py
src/datasets/: loader.py
src/memory/: __init__.py  store.py
src/models/: simple_cnn.py
src/nas/: optuna_search.py
src/search_spaces/: __init__.py  base.py  registry.py  simple_cnn_default.py
src/tracking/: __init__.py  io.py
src/utils/: carbon.py  env.py  logger.py  metrics.py
