[project]
name = "agentic_nas"
version = "0.1.0"
description = "agentic-nas using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.9.3",
]

[project.scripts]
agentic_nas = "agentic_nas.main:run"
run_crew = "agentic_nas.main:run"
train = "agentic_nas.main:train"
replay = "agentic_nas.main:replay"
test = "agentic_nas.main:test"
run_with_trigger = "agentic_nas.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
